Resize icons tab bar

--- a/OfferCity/Base.lproj/Main.storyboard
+++ b/OfferCity/Base.lproj/Main.storyboard
@@ -228,7 +228,7 @@
             </objects>
             <point key="canvasLocation" x="1900" y="83.208395802098963"/>
         </scene>
-        <!--View Controller-->
+        <!--Mapa-->
         <scene sceneID="rFW-Xd-0KV">
             <objects>
                 <viewController id="rzI-D6-BAY" sceneMemberID="viewController">
@@ -241,13 +241,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="mapa" id="tO4-qw-hWw"/>
+                    <tabBarItem key="tabBarItem" title="Mapa" image="mapa" id="tO4-qw-hWw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L0i-ks-Uli" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3794" y="82"/>
         </scene>
-        <!--View Controller-->
+        <!--Perfil-->
         <scene sceneID="108-2o-2UG">
             <objects>
                 <viewController id="eJ7-V8-ciB" sceneMemberID="viewController">
@@ -260,13 +260,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="perfil" id="dti-MS-9I8"/>
+                    <tabBarItem key="tabBarItem" title="Perfil" image="perfil" id="dti-MS-9I8"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O4w-WC-fzp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3810" y="741"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Home-->
         <scene sceneID="QSt-GD-K7n">
             <objects>
                 <viewController id="sze-Jd-xac" customClass="HomeViewController" customModule="OfferCity" customModuleProvider="target" sceneMemberID="viewController">
@@ -288,7 +288,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="home" id="V4T-DE-HhG"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="home" id="V4T-DE-HhG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dzZ-hM-HL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
