--- a/OfferCity/Base.lproj/Main.storyboard
+++ b/OfferCity/Base.lproj/Main.storyboard
@@ -250,7 +250,7 @@
         <!--Perfil-->
         <scene sceneID="108-2o-2UG">
             <objects>
-                <viewController id="eJ7-V8-ciB" sceneMemberID="viewController">
+                <viewController id="eJ7-V8-ciB" customClass="PerfilViewController" customModule="OfferCity" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MZD-Ks-woq"/>
                         <viewControllerLayoutGuide type="bottom" id="uch-b5-4Oj"/>
@@ -501,7 +501,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ddd-7m-4QX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6081" y="-573"/>
+            <point key="canvasLocation" x="6080.8000000000002" y="-573.46326836581716"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wwy-Vb-stu">
